--- a/sorucejs/package.json
+++ b/sorucejs/package.json
@@ -23,19 +23,19 @@
   },
   "homepage": "http://mobxjs.github.com/mobx",
   "devDependencies": {
-    "@types/react": "^0.14.36",
-    "@types/react-dom": "^0.14.17",
-    "awesome-typescript-loader": "^2.2.4",
-    "typescript": "2.0.3",
-    "webpack": "^1.9.6",
-    "webpack-dev-server": "^1.8.2"
+    "@types/prop-types": "^15.5.2",
+    "@types/react": "^16.0.25",
+    "@types/react-dom": "^16.0.3",
+    "awesome-typescript-loader": "^3.4.0",
+    "typescript": "^2.6.1",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "mobx": "^2.5.1",
-    "mobx-react": "^3.5.6",
-    "mobx-react-devtools": "^4.2.6",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-props": "0.0.3",
     "rxjs": "^5.5.2"
   }
 }
